Responsywne ostylowanie promocji kinowych. Z działającym fallbackiem dla .no-flexbox

--- a/app/index.html
+++ b/app/index.html
@@ -179,14 +179,19 @@
 <section class="promotions wrapper">
   <h1>Promocje kinowe</h1>
 
-  <div class="gallery gallery--line">
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-01.jpg" alt="Tania środa. W każdą środę bilet za 11 zł"></div>
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-02.jpg" alt="Kino w spódnicy. Raz w miesiącu. Bilet za 12 zł"></div>
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-03.jpg" alt="Kino seniora. Raz w miesiącu. Bilet za 10 zł"></div>
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-04.jpg" alt="Seans Kinomaniaka. Raz w miesiącu. Bilet za 10 zł"></div>
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-05.jpg" alt="Niedzielne poranki. W niedziele o godz. 11, bilet 12zł"></div>
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-06.jpg" alt="Rodzina chodzi do kina. 20% zniżki z Oławską Kartą Dużej Rodziny"></div>
-    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-07.jpg" alt="Seanse z figlorajem"></div>
+  <div class="fGallery group">
+    <div class="fGallery__subgallery fGallery__subgallery--3 group">
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-01.jpg" alt="Tania środa. W każdą środę bilet za 11 zł"></div>
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-02.jpg" alt="Kino w spódnicy. Raz w miesiącu. Bilet za 12 zł"></div>
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-03.jpg" alt="Kino seniora. Raz w miesiącu. Bilet za 10 zł"></div>
+    </div>
+    
+    <div class="fGallery__subgallery fGallery__subgallery--4 group">
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-04.jpg" alt="Seans Kinomaniaka. Raz w miesiącu. Bilet za 10 zł"></div>
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-05.jpg" alt="Niedzielne poranki. W niedziele o godz. 11, bilet 12zł"></div>
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-06.jpg" alt="Rodzina chodzi do kina. 20% zniżki z Oławską Kartą Dużej Rodziny"></div>
+      <div class="fGallery__el"><img class="fGallery__img" src="./assets/images/promotionsImages/plakat-07.jpg" alt="Seanse z figlorajem"></div>
+    </div>
     
   </div>
   
