Ekstremalnie uproszczone i bardzo wstępne ostylowanie "seeCS"

--- a/app/index.html
+++ b/app/index.html
@@ -356,8 +356,8 @@
 
 </section>
 
-<aside class="zobaczCS">
-  <a href="#" class="zobaczCS__link">Zobacz wydarzenia kulturalne Centrum Sztuki</a>
+<aside class="seeCS">
+  <a href="#" class="btn btn--readMore btn--seeCS">Zobacz wydarzenia kulturalne Centrum Sztuki</a>
 </aside>
 
 <footer class="footer wrapper">
