Ostylowanie responsywne stopki (z wyróżnionym numerem telefonu i google maps)

--- a/app/index.html
+++ b/app/index.html
@@ -362,8 +362,25 @@
 
 <footer class="footer wrapper">
   <h1>Kontakt</h1>
-</footer>
 
+  <div class="contact">
+    <div class="contact__tab contact__tab--address">
+        <h2>Kino Odra</h2>
+        <p>Centrum Sztuki w Oławie</p>
+        <p>ul. Młyńska 3</p>
+        <p>55-200 Oława</p>
+    </div>
+    <div class="contact__tab contact__tab--phone">
+        <h3>Kasa biletowa</h3>
+        <a class="contact__phone" href="tel:+48717351570">(71) 735 15 70</a>
+    </div>
+  </div>
+  
+  
+  <div class="mapResponsive">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2513.999571049502!2d17.298153316280096!3d50.94222097954611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4710279ff8e3a67f%3A0xf09a185e14c3eab7!2sKino+Odra!5e0!3m2!1spl!2spl!4v1506967499588" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>  
+</footer>
 </div>
 
 <script src="/temp/scripts/App.js"></script>
