Dodanie narzędzi do build (za pomocą gulp) aby można było umieścić stronę na gitHub pages

--- a/TYMCZASOWE/dailyLog.html
+++ b/TYMCZASOWE/dailyLog.html
@@ -2,5 +2,6 @@
     <h1>Środa 4 X</h1>
     <ul>
         <li>Dokończenie stylowania stopki - fallback dla przeglądarek bez flexbox</li>
+        <li>Dodanie narzędzi do build (za pomocą gulp) aby można było umieścić stronę na gitHub pages (folder docs)</li>
     </ul>
 </section>
