Poprawiona ścieżka do obrazu logo w header

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
 <header class="site-header wrapper">
   <h1 class="site-header__heading site-header__heading--initUkryte">Kino Odra w Oławie</h1>
-  <img class="site-header__logo" src="/assets/images/logo_kino_odra.png" alt="Logo Kina Odra w Oławie">
+  <img class="site-header__logo" src="./assets/images/logo_kino_odra.png" alt="Logo Kina Odra w Oławie">
   <nav class="primary-nav">
     <ul>
       <li class="primary-nav__element"><a href="#">Repertuar</a></li>
