Ukrycie (tymczasowe) części "zobacz także"

--- a/TYMCZASOWE/dailyLog.html
+++ b/TYMCZASOWE/dailyLog.html
@@ -3,5 +3,6 @@
     <ul>
         <li>Dokończenie stylowania stopki - fallback dla przeglądarek bez flexbox</li>
         <li>Dodanie narzędzi do build (za pomocą gulp) aby można było umieścić stronę na gitHub pages (folder docs)</li>
+        <li>Poprawione obrazki filmów i logo, żeby wyświetlały się na github pages</li>
     </ul>
 </section>
