--- a/app/index.html
+++ b/app/index.html
@@ -356,13 +356,14 @@
 
   </div>
 
-  <button class="btn btn--light btn--readMore">Cennik - więcej informacji</button>
+  <button class="btn btn--light btn--centered btn--readMore">Cennik - więcej informacji</button>
 
 </section>
 
-<aside class="seeCS">
-  <a href="#" class="btn btn--readMore btn--seeCS">Zobacz wydarzenia kulturalne Centrum Sztuki</a>
-</aside>
+<!-- <aside class="seeCS">
+  <h1>Zobacz także repertuar wydarzeń kulturalnych Centrum Sztuki w Oławie</h1>
+  <a href="#" class="btn btn--readMore btn--seeCS">Strona wydarzeń kulturalnych ></a>
+</aside> -->
 
 <footer class="footer wrapper">
   <h1>Kontakt</h1>
