Modal w trakcie stylowania

--- a/app/index.html
+++ b/app/index.html
@@ -391,8 +391,11 @@
 
 <!-- MODAL -->
 <div class="modal" id="priceList-more">
-  <h1>Modal test</h1>
-  Modal
+  <section class="modal__content">
+      <span class="modal__closeBtn">&times;</span>
+      <h1>Modal test</h1>
+      <p>Modal - treść</p>
+  </section>
 </div>
 
 <!-- build:js assets/scripts/App.js -->
