Responsywny header dla flex (bez działania hamburger-icon)

--- a/app/index.html
+++ b/app/index.html
@@ -32,16 +32,17 @@
 <div class="pageContainer">
 
 <header class="site-header wrapper">
-  <h1 class="site-header__heading site-header__heading--initUkryte">Kino Odra w Oławie</h1>
+  <h1 class="site-header__heading visually-hidden">Kino Odra w Oławie</h1>
   <img class="site-header__logo" src="assets/images/logo_kino_odra.png" alt="Logo Kina Odra w Oławie">
-  <nav class="primary-nav">
+  <button class="btn btn--showMenu site-header__showMenuBtn">M</button>
+  <nav class="site-header__primary-nav primary-nav">
     <ul>
       <li class="primary-nav__element"><a href="#">Repertuar</a></li>
       <li class="primary-nav__element"><a href="#">Filmy</a></li>
       <li class="primary-nav__element"><a href="#">Promocje</a></li>
       <li class="primary-nav__element"><a href="#">Cennik</a></li>
       <li class="primary-nav__element"><a href="#">Kontakt</a></li>
-      <li class="primary-nav__element btn btn--nav"><a href="#">Centrum Sztuki</a></li>
+      <li class="primary-nav__element"><a href="#">Centrum Sztuki</a></li>
     </ul>
   </nav>
 </header> 
