Działa przycisk mobile menu (hamburger) - dla flex i bez flex. Jednak zbudowany na display i trudno mu nadać transitions

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
 <div class="pageContainer">
 
-<header class="site-header wrapper group">
+<header class="site-header wrapper">
   <h1 class="site-header__heading visually-hidden">Kino Odra w Oławie</h1>
   <img class="site-header__logo" src="assets/images/logo_kino_odra.png" alt="Logo Kina Odra w Oławie">
   <button class="btn btn--showMenu site-header__showMenuBtn">M</button>
