Zastosowane style od Bartka - bez przycisku "Zobacz wszystkie seanse"

--- a/*struktura.html
+++ b/*struktura.html
@@ -35,7 +35,7 @@
 			<!-- Box dla filmu na konkretny dzień -->
 
 				<h2 class="movieBox__title">Tytuł filmu</h2>
-				<button class="movieBox__aboutBtn btn btn--light btn--aboutMovie">O filmie</button> <!-- na razie ukryte stylami -->
+				<button class="movieBox__aboutBtn btn btn--light btn--aboutMovie btn--rounded">O filmie</button> <!-- na razie ukryte stylami -->
 				<img class="movieBox__poster" src=sciezka_do_plakatu alt="Plakat filmu - %%tytul%%">
 
 				<div class="movieBox__movieLabels">
@@ -54,7 +54,7 @@
 					<ul>
 
 						<li>
-						<buton class="btn btn--light btn--projection">
+						<buton class="btn btn--light btn--projection btn--rounded">
 							<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne wtykiety projekcji - może być tylko 1!! -->
 							<span class="btn--projection__hour">19:30</span>
 							<span class="btn--projection__info">2D napisy</span>
@@ -62,7 +62,7 @@
 						</li>
 
 						<li>
-						<buton class="btn btn--light btn--projection">
+						<buton class="btn btn--light btn--projection btn--rounded">
 							<span class="btn--projection__noLbl">projekcja</span> <!-- jeśli nie ma etykiety -->
 							<span class="btn--projection__hour">22:00</span>
 							<span class="btn--projection__info">3D dubbing</span>
