Dokończenie stylów od Bartka, moje drobne modyfikacje, powrót do pomarańczowego z loga kina. Naprawienie responsywnej mapy w stopce.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
   </nav>
 </header> 
 
-<section class="movieSchedule wrapper">
+<section class="movieSchedule wrapper pageSection pageSection--noTopMargin">
   <h1>Repertuar kina</h1>
 
   <!-- dayPicker -->
@@ -163,7 +163,7 @@
 
 </section>
 
-<section class="movies wrapper">
+<section class="movies wrapper pageSection">
     <!-- Aktualnie i wkrótce w kinie -->
     <h1>Filmy</h1>
     <div class="slickCarousel slickCarousel--movies">
@@ -180,7 +180,7 @@
     </div>
   </section>
 
-<section class="promotions wrapper">
+<section class="promotions wrapper pageSection">
   <h1>Promocje kinowe</h1>
 
   <div class="fGallery group">
@@ -201,7 +201,7 @@
   
 </section>
 
-<section class="priceList wrapper">
+<section class="priceList wrapper pageSection pageSection--noBottomMargin">
   <h1>Cennik</h1>
 
   <div class="priceList__Tab">
@@ -361,10 +361,10 @@
 </section>
 
 <aside class="seeCS">
-  <a href="#" class="btn btn--readMore btn--rounded btn--seeCS">Zobacz wydarzenia kulturalne Centrum Sztuki w Oławie</a>
+  <button class="btn btn--readMore btn--rounded btn--seeCS">Zobacz wydarzenia kulturalne Centrum Sztuki w Oławie</a>
 </aside>
 
-<footer class="footer wrapper">
+<footer class="footer wrapper pageSection">
   <h1>Kontakt</h1>
 
   <div class="contact">
@@ -380,10 +380,13 @@
     </div>
   </div>
   
-  
-  <div class="mapResponsive">
+<div class="mapResponsive"> 
+<!-- zewnętrzny div mapResponsive odpowiada za "docięcie" elementu na stronie -->
+<!-- wewnętrzny (inner) za responsywność mapy -->
+  <div class="mapResponsive-inner">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2513.999571049502!2d17.298153316280096!3d50.94222097954611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4710279ff8e3a67f%3A0xf09a185e14c3eab7!2sKino+Odra!5e0!3m2!1spl!2spl!4v1506967499588" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>  
+  </div>
+</div> 
 </footer>
 </div>
 
