Dodanie adresu mail kasy do stopki

--- a/app/index.html
+++ b/app/index.html
@@ -374,9 +374,10 @@
         <p>ul. Młyńska 3</p>
         <p>55-200 Oława</p>
     </div>
-    <div class="contact__tab contact__tab--phone">
+    <div class="contact__tab contact__tab--phone-mail">
         <h3>Kasa biletowa</h3>
         <a class="contact__phone" href="tel:+48717351570">(71) 735 15 70</a>
+        <a class="contact__mail" href="mailto:bilety@kultura.olawa.pl">bilety@kultura.olawa.pl</a>
     </div>
   </div>
   
