Przerobienie przycisku projekcji

--- a/*struktura.html
+++ b/*struktura.html
@@ -54,19 +54,19 @@
 					<ul>
 
 						<li>
-						<buton class="btn btn--light btn--projection btn--rounded">
-							<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne wtykiety projekcji - może być tylko 1!! -->
+						<button class="btn btn--light btn--projection">
+							<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne etykiety projekcji - może być tylko 1!! -->
 							<span class="btn--projection__hour">19:30</span>
 							<span class="btn--projection__info">2D napisy</span>
-						</buton>
+						</button>
 						</li>
 
 						<li>
-						<buton class="btn btn--light btn--projection btn--rounded">
-							<span class="btn--projection__noLbl">projekcja</span> <!-- jeśli nie ma etykiety -->
+						<button class="btn btn--light btn--projection">
+							<span class="btn--projection__lbl btn--projection__lbl--none">projekcja</span> <!-- jeśli nie ma etykiety -->
 							<span class="btn--projection__hour">22:00</span>
 							<span class="btn--projection__info">3D dubbing</span>
-						</buton>
+						</button>
 						</li>
 
 					</ul>
