Uporządkowanie kolorów w przyciskach, uporządkowanie obramowań (mixins)

--- a/*struktura.html
+++ b/*struktura.html
@@ -35,7 +35,7 @@
 			<!-- Box dla filmu na konkretny dzień -->
 
 				<h2 class="movieBox__title">Tytuł filmu</h2>
-				<button class="movieBox__aboutBtn btn btn--light btn--aboutMovie btn--rounded">O filmie</button> <!-- na razie ukryte stylami -->
+				<button class="movieBox__aboutBtn btn btn--dark btn--hovColor btn--rounded btn--aboutMovie">O filmie</button> <!-- na razie ukryte stylami -->
 				<img class="movieBox__poster" src=sciezka_do_plakatu alt="Plakat filmu - %%tytul%%">
 
 				<div class="movieBox__movieLabels">
@@ -54,7 +54,7 @@
 					<ul>
 
 						<li>
-						<button class="btn btn--light btn--projection">
+						<button class="btn btn--light btn--transparent btn--projection">
 							<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne etykiety projekcji - może być tylko 1!! -->
 							<span class="btn--projection__hour">19:30</span>
 							<span class="btn--projection__info">2D napisy</span>
@@ -62,7 +62,7 @@
 						</li>
 
 						<li>
-						<button class="btn btn--light btn--projection">
+						<button class="btn btn--light btn--transparent btn--projection">
 							<span class="btn--projection__lbl btn--projection__lbl--none">projekcja</span> <!-- jeśli nie ma etykiety -->
 							<span class="btn--projection__hour">22:00</span>
 							<span class="btn--projection__info">3D dubbing</span>
@@ -71,7 +71,7 @@
 
 					</ul>
 
-					<button href="#" class="btn btn--light movieBox__seeAllBtn">Zobacz wszystkie seanse</button> <!-- na razie ukryte stylami -->
+					<button href="#" class="btn btn--light btn--transparent btn--hovColor btn--seeAllProjections">Zobacz wszystkie seanse</button> <!-- na razie ukryte stylami -->
 				</section>
 
 				<!-- TEGO NA RAZIE NIE MA -->
