--- a/app/index.html
+++ b/app/index.html
@@ -356,12 +356,12 @@
 
   </div>
 
-  <button class="btn btn--light btn--centered btn--readMore btn--rounded">Cennik - więcej informacji</button>
+  <button class="btn btn--color btn--centered btn--readMore btn--rounded">Cennik - więcej informacji</button>
 
 </section>
 
 <aside class="seeCS">
-  <button class="btn btn--readMore btn--rounded btn--seeCS">Zobacz wydarzenia kulturalne Centrum Sztuki w Oławie</a>
+  <button class="btn btn--rounded btn--light btn--readMore  btn--seeCS">Zobacz wydarzenia kulturalne Centrum Sztuki w Oławie</a>
 </aside>
 
 <footer class="footer wrapper pageSection">
